Correct form width on smaller devices

--- a/components/_cards.scss
+++ b/components/_cards.scss
@@ -1,6 +1,7 @@
 .card {
   background-color: #fff;
-  max-width: 50rem;
+  max-width: 30%;
+  width: 50rem;
   border-radius: 1rem;
   display: flex;
   flex-direction: column;
