--- a/components/_header.scss
+++ b/components/_header.scss
@@ -23,7 +23,7 @@
 
   &__hamburger {
     position: absolute;
-    top: 3.5rem;
+    top: 3.4rem;
     right: 4rem;
     display: none;
     flex-direction: column;
